--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,34 @@
-# 工作流名称
-name: build and push docker images
-# 工作流运行时显示名称
-run-name: ${{ github.actor }} is Sync Images to DockerHub.
-# 怎样触发工作流
+name: Publish Docker image
+
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# 工作流程任务（通常含有一个或多个步骤）
 jobs:
-  syncimages:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repos
-      uses: actions/checkout@v3
+      - name: Check out the repo
+        uses: actions/checkout@v4
       
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2.9.1
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2.2.0
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        logout: false
-        
-    - name: build
-      run: |
-        docker builtx built --tag chetaxiaoxiao/base:latest --file Dockerfile . --push
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: chetaxiaoxiao/base
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
